--- a/templets/weiducn/footer.htm
+++ b/templets/weiducn/footer.htm
@@ -12,7 +12,7 @@
                 <ul>
                     {dede:arclist typeid=52 limit='0,6' titlelen=60 infolen=110 orderby='pubdate' }
                     <li  class="first fw">
-                        <a href=""><span>[field:title/]</span></a>
+                        <a href="[field:picname/]"><span>[field:title/]</span></a>
                     </li>
                     {/dede:arclist}
                 </ul>
@@ -127,6 +127,7 @@
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1254025928'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1254025928' type='text/javascript'%3E%3C/script%3E"));</script>
 <script type="text/javascript">
 var _maq = _maq || [];
+var wfs = $(".wfs");
 var key = "UV_APPLE";
 _maq.push(['apiKey', '100000'],['name', key]);
 (function() {
@@ -134,6 +135,25 @@ _maq.push(['apiKey', '100000'],['name', key]);
     ma.src = ('https:' == document.location.protocol ? 'https://stats' : 'http://stats') + '.smsbao.com/webstats.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ma, s);
 })();
+$(function(){
+    var source=getCookie('source');
+    if( source > 0){
+        getwfs(source);
+    }
+})
+
+function getwfs(source){
+    wfs.html('<a style="background:url(/images/v2/sms.png) no-repeat center center;height:26px;" href=""><div class="num">'+source+'</div></a>')
+}
+
+function getCookie(name)
+{
+    var arr,reg=new RegExp("(^| )"+name+"=([^;]*)(;|$)");
+    if(arr=document.cookie.match(reg))
+        return unescape(arr[2]);
+    else
+        return null;
+}
 </script>
 
 </div>
